<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/layout_enter_mobile_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.sslwireless.sslcommerzlibrary.view.custom.SSLCCustomTextView
            android:id="@+id/tv_welcome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/welcome_coma" />

        <com.sslwireless.sslcommerzlibrary.view.custom.SSLCCustomTextView
            android:id="@+id/tv_customer_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/guest"
            android:textStyle="bold" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="25dp"
            android:background="@color/very_light_grey"></View>

        <com.sslwireless.sslcommerzlibrary.view.custom.SSLCCustomTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="15dp"
            android:text="@string/already_registered_so_verify"
            android:textColor="@color/colorPrimary" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:background="@drawable/border_color_selector_sslc"
            android:orientation="horizontal">

            <com.sslwireless.sslcommerzlibrary.view.custom.SSLCCustomEdittext
                android:id="@+id/et_mobile_number_ssl"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="6"
                android:background="@android:color/transparent"
                android:hint="Enter Your Mobile Number"
                android:imeOptions="actionNext"
                android:inputType="number"
                android:maxLength="11"
                android:padding="10dp"
                android:textSize="14sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/country_iv"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:src="@drawable/bangladesh_sslc" />


            <Button
                android:id="@+id/btn_verify"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:background="@drawable/custom_btn_clementine"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/verify"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="14sp" />


        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.sslwireless.sslcommerzlibrary.view.custom.SSLCCustomTextView
                android:id="@+id/tv_change_numeber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:text="@string/change_number" />

            <com.sslwireless.sslcommerzlibrary.view.custom.SSLCCustomTextView
                android:id="@+id/tv_skip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginBottom="15dp"
                android:text="@string/skip_this_step" />
        </RelativeLayout>
    </LinearLayout>
</LinearLayout>
