<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".view.activity.MainUIActivitySSLC">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsingToolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            android:minHeight="?attr/actionBarSize"
            app:layout_scrollFlags="scroll|enterAlways">

            <include
                android:id="@+id/toolbar"
                layout="@layout/ssl_toolbar" />

            <LinearLayout
                android:id="@+id/header_layout_ll"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <FrameLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerHorizontal="true"
                            android:layout_gravity="center_horizontal"
                            android:layout_marginBottom="10dp"
                            android:foreground="@drawable/circle_background_sslc">

                            <ImageView
                                android:id="@+id/merchant_logo_iv"
                                android:layout_width="80dp"
                                android:layout_height="80dp"
                                android:padding="8dp" />
                        </FrameLayout>

                        <ImageView
                            android:id="@+id/iv_language"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentRight="true"
                            android:paddingRight="10dp"
                            android:src="@drawable/ic_eng" />
                    </RelativeLayout>


                    <TextView
                        android:id="@+id/tv_merchant_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:text="Bomb Bazar"
                        android:textAlignment="center"
                        android:textSize="18sp" />

                        <TextView
                            android:id="@+id/tv_user_name"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center_horizontal"
                            android:text="---"
                            android:textAlignment="center"
                            android:textSize="16sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:orientation="horizontal"
                    android:padding="10dp">

                    <LinearLayout
                        android:id="@+id/clickSupport"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/ic_headphone_sslc" />

                        <com.sslwireless.sslcommerzlibrary.view.custom.SSLCCustomTextView
                            android:id="@+id/tv_support"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/support"
                            android:textColor="@color/colorPrimary" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/clickFAQ"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="16dp"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:src="@drawable/ic_help_sslc" />

                        <com.sslwireless.sslcommerzlibrary.view.custom.SSLCCustomTextView
                            android:id="@+id/tv_faq"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/faq"
                            android:textColor="@color/colorPrimary" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/layout_offer"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="16dp"
                        android:gravity="center"
                        android:orientation="vertical">

                        <FrameLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="match_parent"
                                android:src="@drawable/ic_offer_new_sslc" />

                            <LinearLayout
                                android:id="@+id/badgeLayout"
                                android:layout_width="20dp"
                                android:layout_height="20dp"
                                android:layout_gravity="right"
                                android:background="@drawable/badge_background_sslc"
                                android:padding="2dp"
                                android:visibility="gone">

                                <com.sslwireless.sslcommerzlibrary.view.custom.SSLCCustomTextView
                                    android:id="@+id/badge"
                                    android:layout_width="15dp"
                                    android:layout_height="15dp"
                                    android:gravity="center"
                                    android:text="99+"
                                    android:textColor="@color/white"
                                    android:textSize="7sp" />
                            </LinearLayout>
                        </FrameLayout>

                        <com.sslwireless.sslcommerzlibrary.view.custom.SSLCCustomTextView
                            android:id="@+id/tv_offer"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/offers"
                            android:textColor="@color/colorPrimary" />
                    </LinearLayout>
                    <LinearLayout
                        android:id="@+id/layout_top_login"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="16dp"
                        android:gravity="center"
                        android:orientation="vertical">

                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="match_parent"
                                android:src="@drawable/ic_login_sslc" />

                        <com.sslwireless.sslcommerzlibrary.view.custom.SSLCCustomTextView
                            android:id="@+id/tv_logout"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/sdk_login"
                            android:textColor="@color/colorPrimary" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </com.google.android.material.appbar.CollapsingToolbarLayout>

        <LinearLayout
            android:id="@+id/mainLyout1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right|bottom"
            android:layout_marginRight="4dp"
            android:layout_marginBottom="2dp"
            android:background="@drawable/session_timeout_background_sslc"
            android:visibility="visible">

            <com.sslwireless.sslcommerzlibrary.view.custom.SSLCCustomTextView
                android:id="@+id/timerText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="2dp"
                android:text="AAA"
                android:textColor="@color/white"
                android:textSize="11sp" />

        </LinearLayout>

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabs"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            app:tabIndicatorHeight="0dp"
            app:tabTextAppearance="@style/MyCustomTabTextAppearance" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/white_off" />
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/viewPager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:gravity="center"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/layout_amount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#F6F6F6"
            android:padding="8dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <com.sslwireless.sslcommerzlibrary.view.custom.SSLCCustomTextView
                    android:id="@+id/tv_amount_header"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="@string/amount_colon"
                    android:textColor="@color/colorPrimary"
                    android:textSize="12sp" />
                <com.sslwireless.sslcommerzlibrary.view.custom.SSLCCustomTextView
                    android:id="@+id/tv_amount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="0.00 BDT"
                    android:textColor="@color/colorPrimary"
                    android:textSize="12sp" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:orientation="horizontal">
                <com.sslwireless.sslcommerzlibrary.view.custom.SSLCCustomTextView
                    android:id="@+id/tv_charge_header"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="@string/additional_fees_colon"
                    android:textColor="@color/colorPrimary"
                    android:textSize="12sp" />
                <com.sslwireless.sslcommerzlibrary.view.custom.SSLCCustomTextView
                    android:id="@+id/tv_charge"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="0.00 BDT"
                    android:textColor="@color/colorPrimary"
                    android:textSize="12sp" />
            </LinearLayout>
        </RelativeLayout>
        <LinearLayout
            android:id="@+id/layout_pay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white_off"
            android:padding="8dp"
            android:gravity="center"
            android:orientation="horizontal">
            <ImageView
                android:id="@+id/iv_pay"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:src="@drawable/ic_tap_sslc" />

            <com.sslwireless.sslcommerzlibrary.view.custom.SSLCCustomTextView
                android:id="@+id/tv_pay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/pay"
                android:textColor="@color/white"
                android:textSize="16sp" />
        </LinearLayout>
    </LinearLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>
