<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layout_otp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        card_view:cardCornerRadius="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            android:background="@drawable/round_white_background_sslc"
            android:orientation="vertical"
            android:padding="20dp">

            <LinearLayout
                android:id="@+id/layout_otp_existing_card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:background="@color/very_light_grey"
                    android:orientation="horizontal"
                    android:padding="10dp">

                    <com.sslwireless.sslcommerzlibrary.view.custom.SSLCCustomTextView
                        android:id="@+id/tv_otp_card_number"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="4"
                        android:text="---" />

                    <ImageView
                        android:id="@+id/iv_otp_card_type"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:src="@drawable/default_card" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="right">

                        <View
                            android:layout_width="1dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:background="@color/grey" />

                    </LinearLayout>

                    <com.sslwireless.sslcommerzlibrary.view.custom.SSLCCustomTextView
                        android:id="@+id/tv_otp_has_emi"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="right"
                        android:text="@string/no_emi" />
                </LinearLayout>

                <com.sslwireless.sslcommerzlibrary.view.custom.SSLCCustomTextView
                    android:id="@+id/tv_otp_change_card"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="4"
                    android:text="@string/change_card"
                    android:textColor="@color/colorPrimary"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <com.sslwireless.sslcommerzlibrary.view.custom.SSLCCustomTextView
                    android:id="@+id/tv_otp_header"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/verification_code"
                    android:textAlignment="center"
                    android:textColor="@color/edit_text_color"
                    android:textSize="15sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="40dp"
                        android:layout_weight="1"
                        android:background="@drawable/recangle_layout_sslc">

                        <com.sslwireless.sslcommerzlibrary.view.custom.SSLCCustomEdittext
                            android:id="@+id/pin1"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@android:color/transparent"
                            android:gravity="center"
                            android:imeOptions="actionNext"
                            android:inputType="number"
                            android:paddingBottom="10dp"
                            android:paddingStart="10dp"
                            android:paddingEnd="10dp" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="40dp"
                        android:layout_marginLeft="8dp"
                        android:layout_marginRight="8dp"
                        android:layout_weight="1"
                        android:background="@drawable/recangle_layout_sslc">

                        <com.sslwireless.sslcommerzlibrary.view.custom.SSLCCustomEdittext
                            android:id="@+id/pin2"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@android:color/transparent"
                            android:gravity="center"
                            android:imeOptions="actionNext"
                            android:inputType="number"
                            android:paddingBottom="10dp"
                            android:paddingStart="10dp"
                            android:paddingEnd="10dp" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="40dp"
                        android:layout_weight="1"
                        android:background="@drawable/recangle_layout_sslc">

                        <com.sslwireless.sslcommerzlibrary.view.custom.SSLCCustomEdittext
                            android:id="@+id/pin3"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@android:color/transparent"
                            android:gravity="center"
                            android:imeOptions="actionNext"
                            android:inputType="number"
                            android:paddingBottom="10dp"
                            android:paddingStart="10dp"
                            android:paddingEnd="10dp" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="40dp"
                        android:layout_marginLeft="8dp"
                        android:layout_marginRight="8dp"
                        android:layout_weight="1"
                        android:background="@drawable/recangle_layout_sslc">

                        <com.sslwireless.sslcommerzlibrary.view.custom.SSLCCustomEdittext
                            android:id="@+id/pin4"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@android:color/transparent"
                            android:gravity="center"
                            android:imeOptions="actionNext"
                            android:inputType="number"
                            android:paddingBottom="10dp"
                            android:paddingStart="10dp"
                            android:paddingEnd="10dp" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="40dp"
                        android:layout_weight="1"
                        android:background="@drawable/recangle_layout_sslc">

                        <com.sslwireless.sslcommerzlibrary.view.custom.SSLCCustomEdittext
                            android:id="@+id/pin5"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@android:color/transparent"
                            android:gravity="center"
                            android:imeOptions="actionNext"
                            android:inputType="number"
                            android:paddingBottom="10dp"
                            android:paddingStart="10dp"
                            android:paddingEnd="10dp" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="40dp"
                        android:layout_marginLeft="8dp"
                        android:layout_weight="1"
                        android:background="@drawable/recangle_layout_sslc">

                        <com.sslwireless.sslcommerzlibrary.view.custom.SSLCCustomEdittext
                            android:id="@+id/pin6"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@android:color/transparent"
                            android:gravity="center"
                            android:imeOptions="actionDone"
                            android:paddingBottom="10dp"
                            android:inputType="number"/>

                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:orientation="horizontal">

                    <com.sslwireless.sslcommerzlibrary.view.custom.SSLCCustomTextView
                        android:id="@+id/tv_change_number_otp"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center|bottom"
                        android:padding="10dp"
                        android:text="@string/change_number"
                        android:textColor="@color/colorPrimary"
                        android:textSize="14sp" />

                    <com.sslwireless.sslcommerzlibrary.view.custom.SSLCCustomTextView
                        android:id="@+id/tv_resend_otp"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:layout_weight="1"
                        android:gravity="center|bottom"
                        android:padding="10dp"
                        android:text="@string/resend_otp"
                        android:textColor="@color/colorPrimary"
                        android:textSize="14sp" />
                </LinearLayout>

            </LinearLayout>
        </LinearLayout>

    </androidx.cardview.widget.CardView>
</RelativeLayout>